tests/golden/type_errors/generic_struct_method_impl_arity.cd
struct Box<T> { value: T }

impl Box {
  fun get(): T {
    return this.value;
  }
}
