tests/golden/type_errors/generic_struct_method_impl_arity.err
Type error at 3:6: impl for generic struct `Box` expects 1 type parameters but got 0
  impl Box {
       ^
